--- a/templates/dashboard/user/index.html.twig
+++ b/templates/dashboard/user/index.html.twig
@@ -20,12 +20,12 @@
 	'button_url': path('dashboard_user_new')
 	} %}
 
-	<div class="mt-6 hidden md:flex md:flex-col">
-		<div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
-			<div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
+	<div class="mt-6 flex xl:flex-col">
+		<div class="inline-block min-w-full py-2 align-middle xl:px-8">
+			<div class="overflow-x-auto shadow ring-1 ring-black ring-opacity-5 xl:rounded-lg">
 				<table class="min-w-full divide-y divide-gray-300">
 
-					<thead class="bg-gray-50">
+					<thead class="bg-gray-50 overflow-y-hidden">
 						<tr>
 							{% set columns = {
 							'Id': 'u.id',
@@ -34,18 +34,18 @@
 							'Créer le': 'u.createdAt'
 							} %}
 							{% for displayedName, realName in columns %}
-							<th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">
+							<th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900 whitespace-nowrap text-sm md:text-base">
 								{{ knp_pagination_sortable(users, displayedName, realName) }}
 							</th>
 							{% endfor %}
-							<th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">
+							<th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900 whitespace-nowrap text-sm md:text-base">
 								Actions
 							</th>
 						</tr>
 					</thead>
 					<tbody class="divide-y divide-gray-200 bg-white">
 						{% for user in users %}
-						<tr>
+						<tr class="text-sm md:text-base">
 							<td class="whitespace-nowrap px-6 py-4 font-medium text-gray-900 sm:pl-6">
 								<a href="{{ path('dashboard_user_show', {'id': user.id}) }}">{{ user.id }}</a>
 							</td>
