--- a/templates/dashboard_layout.html.twig
+++ b/templates/dashboard_layout.html.twig
@@ -24,7 +24,7 @@
 
   <div class="flex-col w-full h-screen">
     {% include 'components/sidebar.html.twig' %}
-    <div id="content" class="ml-12 md:p-4">
+    <div id="content" class="ml-12 xl:p-4">
       {% block content %}{% endblock %}
     </div>
   </div>
