--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -7,10 +7,10 @@
                 <div class="h-10 w-10 bg-black"></div>
             </a>
             <div class="ml-10 flex items-baseline space-x-9 text-lg">
-                <a class="text-lg" href="#">Produit</a>
-                <a class="text-lg" href="#">Solutions</a>
-                <a class="text-lg" href="#">Ressources</a>
-                <a class="text-lg" href="#">Prix</a>
+{#                <a class="text-lg" href="#">Produit</a>#}
+{#                <a class="text-lg" href="#">Solutions</a>#}
+{#                <a class="text-lg" href="#">Ressources</a>#}
+{#                <a class="text-lg" href="#">Prix</a>#}
             </div>
         </div>
         {% if app.user %}
