--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,8 @@
     {% endblock %}
 
     {% block javascripts %}
-    <script src="https://cdn.tailwindcss.com"></script>
+        <script src="https://cdn.tailwindcss.com"></script>
+        {% block importmap %}{{ importmap('app') }}{% endblock %}
     {% endblock %}
 </head>
 
