--- a/templates/components/sidebar.html.twig
+++ b/templates/components/sidebar.html.twig
@@ -14,12 +14,7 @@
     <div class= "max hidden text-white mt-20 flex-col space-y-2 w-full h-[calc(100vh)]">
         <a href="{{ path('dashboard_index') }}">
             <div class =  "hover:ml-4 w-full text-white hover:text-green-500 bg-[#1E293B] p-2 pl-8 rounded-full transform ease-in-out duration-300 flex flex-row items-center space-x-3">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewbox="0 0 24 24" fill="none"
-                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                     class="lucide lucide-home">
-                    <path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
-                    <polyline points="9 22 9 12 15 12 15 22"/>
-                </svg>
+                <twig:ux:icon name="tabler:home" width="16px" height="16px" />
                 <div>
                     Accueil
                 </div>
@@ -27,15 +22,7 @@
         </a>
         <a href="{{ path('dashboard_address_index') }}">
             <div class =  "hover:ml-4 w-full text-white hover:text-green-500 bg-[#1E293B] p-2 pl-8 rounded-full transform ease-in-out duration-300 flex flex-row items-center space-x-3">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewbox="0 0 24 24" fill="none"
-                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                     class="lucide lucide-locate">
-                    <line x1="2" x2="5" y1="12" y2="12"/>
-                    <line x1="19" x2="22" y1="12" y2="12"/>
-                    <line x1="12" x2="12" y1="2" y2="5"/>
-                    <line x1="12" x2="12" y1="19" y2="22"/>
-                    <circle cx="12" cy="12" r="7"/>
-                </svg>
+                <twig:ux:icon name="tabler:map-pin" width="16px" height="16px" />
                 <div>
                     Adresse
                 </div>
@@ -43,17 +30,7 @@
         </a>
         <a href="{{ path('dashboard_company_index') }}">
             <div class =  "hover:ml-4 w-full text-white hover:text-green-500 bg-[#1E293B] p-2 pl-8 rounded-full transform ease-in-out duration-300 flex flex-row items-center space-x-3">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                     class="lucide lucide-building-2">
-                    <path d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"/>
-                    <path d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"/>
-                    <path d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"/>
-                    <path d="M10 6h4"/>
-                    <path d="M10 10h4"/>
-                    <path d="M10 14h4"/>
-                    <path d="M10 18h4"/>
-                </svg>
+                <twig:ux:icon name="tabler:building" width="16px" height="16px" />
                 <div>
                     Entreprise
                 </div>
@@ -61,14 +38,7 @@
         </a>
         <a href="{{ path('dashboard_person_index') }}">
             <div class =  "hover:ml-4 w-full text-white hover:text-green-500 bg-[#1E293B] p-2 pl-8 rounded-full transform ease-in-out duration-300 flex flex-row items-center space-x-3">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                     class="lucide lucide-user-round-search">
-                    <circle cx="10" cy="8" r="5"/>
-                    <path d="M2 21a8 8 0 0 1 10.434-7.62"/>
-                    <circle cx="18" cy="18" r="3"/>
-                    <path d="m22 22-1.9-1.9"/>
-                </svg>
+                <twig:ux:icon name="tabler:user-square" width="16px" height="16px" />
                 <div>
                     Personne
                 </div>
@@ -76,12 +46,7 @@
         </a>
         <a href="{{ path('dashboard_user_index') }}">
             <div class =  "hover:ml-4 w-full text-white hover:text-green-500 bg-[#1E293B] p-2 pl-8 rounded-full transform ease-in-out duration-300 flex flex-row items-center space-x-3">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                     class="lucide lucide-user-round">
-                    <circle cx="12" cy="8" r="5"/>
-                    <path d="M20 21a8 8 0 0 0-16 0"/>
-                </svg>
+                <twig:ux:icon name="tabler:user" width="16px" height="16px" />
                 <div>
                     Utilisateur
                 </div>
@@ -89,13 +54,7 @@
         </a>
         <a href="{{ path('dashboard_mission_index') }}">
             <div class =  "hover:ml-4 w-full text-white hover:text-green-500 bg-[#1E293B] p-2 pl-8 rounded-full transform ease-in-out duration-300 flex flex-row items-center space-x-3">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                     class="lucide lucide-file-minus-2">
-                    <path d="M4 22h14a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v4"/>
-                    <path d="M14 2v4a2 2 0 0 0 2 2h4"/>
-                    <path d="M3 15h6"/>
-                </svg>
+                <twig:ux:icon name="hugeicons:job-search" width="16px" height="16px" />
                 <div>
                     Mission
                 </div>
@@ -103,14 +62,7 @@
         </a>
         <a href="{{ path('dashboard_supplier_index') }}">
             <div class =  "hover:ml-4 w-full text-white hover:text-green-500 bg-[#1E293B] p-2 pl-8 rounded-full transform ease-in-out duration-300 flex flex-row items-center space-x-3">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                     class="lucide lucide-file-code-2">
-                    <path d="M4 22h14a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v4"/>
-                    <path d="M14 2v4a2 2 0 0 0 2 2h4"/>
-                    <path d="m5 12-3 3 3 3"/>
-                    <path d="m9 18 3-3-3-3"/>
-                </svg>
+                <twig:ux:icon name="oui:ml-create-population-job" width="16px" height="16px" />
                 <div>
                     Fournisseur
                 </div>
@@ -118,11 +70,7 @@
         </a>
         <a href="{{ path('app_logout') }}" class="mt-auto mb-4">
             <div class="hover:ml-4 w-full text-white hover:text-green-500 bg-[#1E293B] p-2 pl-8 rounded-full transform ease-in-out duration-300 flex flex-row items-center space-x-3">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-log-out">
-                    <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/>
-                    <polyline points="16 17 21 12 16 7"/>
-                    <line x1="21" x2="9" y1="12" y2="12"/>
-                </svg>
+                <twig:ux:icon name="material-symbols:logout" width="16px" height="16px" />
                 <div>
                     Logout
                 </div>
@@ -133,94 +81,42 @@
     <div class= "mini mt-20 flex flex-col space-y-2 w-full h-[calc(100vh)]">
         <a href="{{ path('dashboard_index') }}">
             <div class= "hover:ml-4 justify-end pr-5 text-white hover:text-green-500 w-full bg-[#1E293B] p-3 rounded-full transform ease-in-out duration-300 flex">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewbox="0 0 24 24" fill="none"
-                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                     class="lucide lucide-home">
-                    <path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
-                    <polyline points="9 22 9 12 15 12 15 22"/>
-                </svg>
+                <twig:ux:icon name="tabler:home" width="16px" height="16px" />
             </div>
         </a>
         <a href="{{ path('dashboard_address_index') }}">
             <div class= "hover:ml-4 justify-end pr-5 text-white hover:text-green-500 w-full bg-[#1E293B] p-3 rounded-full transform ease-in-out duration-300 flex">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewbox="0 0 24 24" fill="none"
-                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                     class="lucide lucide-locate">
-                    <line x1="2" x2="5" y1="12" y2="12"/>
-                    <line x1="19" x2="22" y1="12" y2="12"/>
-                    <line x1="12" x2="12" y1="2" y2="5"/>
-                    <line x1="12" x2="12" y1="19" y2="22"/>
-                    <circle cx="12" cy="12" r="7"/>
-                </svg>
+                <twig:ux:icon name="tabler:map-pin" width="16px" height="16px" />
             </div>
         </a>
         <a href="{{ path('dashboard_company_index') }}">
             <div class= "hover:ml-4 justify-end pr-5 text-white hover:text-green-500 w-full bg-[#1E293B] p-3 rounded-full transform ease-in-out duration-300 flex">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                     class="lucide lucide-building-2">
-                    <path d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"/>
-                    <path d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"/>
-                    <path d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"/>
-                    <path d="M10 6h4"/>
-                    <path d="M10 10h4"/>
-                    <path d="M10 14h4"/>
-                    <path d="M10 18h4"/>
-                </svg>
+                <twig:ux:icon name="tabler:building" width="16px" height="16px" />
             </div>
         </a>
         <a href="{{ path('dashboard_person_index') }}">
             <div class= "hover:ml-4 justify-end pr-5 text-white hover:text-green-500 w-full bg-[#1E293B] p-3 rounded-full transform ease-in-out duration-300 flex">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                     class="lucide lucide-user-round-search">
-                    <circle cx="10" cy="8" r="5"/>
-                    <path d="M2 21a8 8 0 0 1 10.434-7.62"/>
-                    <circle cx="18" cy="18" r="3"/>
-                    <path d="m22 22-1.9-1.9"/>
-                </svg>
+                <twig:ux:icon name="tabler:user-square" width="16px" height="16px" />
             </div>
         </a>
         <a href="{{ path('dashboard_user_index') }}">
             <div class= "hover:ml-4 justify-end pr-5 text-white hover:text-green-500 w-full bg-[#1E293B] p-3 rounded-full transform ease-in-out duration-300 flex">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                     class="lucide lucide-user-round">
-                    <circle cx="12" cy="8" r="5"/>
-                    <path d="M20 21a8 8 0 0 0-16 0"/>
-                </svg>
+                <twig:ux:icon name="tabler:user" width="16px" height="16px" />
             </div>
         </a>
         <a href="{{ path('dashboard_mission_index') }}">
             <div class= "hover:ml-4 justify-end pr-5 text-white hover:text-green-500 w-full bg-[#1E293B] p-3 rounded-full transform ease-in-out duration-300 flex">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                     class="lucide lucide-file-minus-2">
-                    <path d="M4 22h14a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v4"/>
-                    <path d="M14 2v4a2 2 0 0 0 2 2h4"/>
-                    <path d="M3 15h6"/>
-                </svg>
+                <twig:ux:icon name="hugeicons:job-search" width="16px" height="16px" />
             </div>
         </a>
         <a href="{{ path('dashboard_supplier_index') }}">
             <div class= "hover:ml-4 justify-end pr-5 text-white hover:text-green-500 w-full bg-[#1E293B] p-3 rounded-full transform ease-in-out duration-300 flex">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                     class="lucide lucide-file-code-2">
-                    <path d="M4 22h14a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v4"/>
-                    <path d="M14 2v4a2 2 0 0 0 2 2h4"/>
-                    <path d="m5 12-3 3 3 3"/>
-                    <path d="m9 18 3-3-3-3"/>
-                </svg>
+                <twig:ux:icon name="oui:ml-create-population-job" width="16px" height="16px" />
             </div>
         </a>
         <a href="{{ path('app_logout') }}" class="mt-auto mb-4">
             <div class="hover:ml-4 justify-end pr-5 text-white hover:text-green-500 w-full bg-[#1E293B] p-3 rounded-full transform ease-in-out duration-300 flex">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-log-out">
-                    <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/>
-                    <polyline points="16 17 21 12 16 7"/>
-                    <line x1="21" x2="9" y1="12" y2="12"/>
-                </svg>
+                <twig:ux:icon name="material-symbols:logout" width="16px" height="16px" />
             </div>
         </a>
     </div>
