--- a/templates/dashboard/company/index.html.twig
+++ b/templates/dashboard/company/index.html.twig
@@ -46,9 +46,13 @@
                                     {{ company.name|default('null') }}
                                 </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500">
-                                    <a href="{{ path('dashboard_address_show', { id: company.getAddress().getId() }) }}" class="underline opacity-75 hover:bg-gray-100">
-                                        {{ company.getAddress.getFullAddress }}
-                                    </a>
+                                    {% if company.getAddress() != null %}
+                                        <a href="{{ path('dashboard_address_show', { id: company.getAddress().getId() }) }}" class="underline opacity-75 hover:opacity-100">
+                                            {{ company.getAddress.getFullAddress }}
+                                        </a>
+                                        {% else %}
+                                            <span class="text-red-600 font-black underline">Aucune adresse</span>
+                                    {% endif %}
                                 </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
                                     {{ company.getType().getLabel() }}
