--- a/templates/dashboard/mission/invoice_new.html.twig
+++ b/templates/dashboard/mission/invoice_new.html.twig
@@ -3,5 +3,5 @@
 {% block content %}
     <h2 class="text-xl font-semibold leading-7 text-gray-900 mb-4">Creation d'une facture</h2>
 
-    <twig:InvoiceMissionForm :mission="mission" />
+    <twig:InvoiceMissionForm :mission="mission" :invoice="invoice" />
 {% endblock %}
